# insta-video-gen

./: .gitignore  README.md  app.py  clean.sh  main.py  pyproject.toml  requirements.txt  setup.py
app/: __init__.py  compilationmaker.py  instadownloader.py  settings.py
src/: instagram_downloader.py  settings.py  utils.py  video_compiler.py  youtube_uploader.py  yt_uploader.py
